# the-league

./: README.md  compose.yml  index.html
assets/: Container-CqwIY3wS.js  Container-NNiB7_Yb.js  index-BGIA6b68.js  index-BSVUdWSn.js  index-Bz3DtM6b.js  index-C8ee2Rwt.js  index-CIzzXKEV.css  index-CVAZ_PKW.js  index-ClyZQroe.js  index-Cv7lETMv.js  index-DIV4hR7p.js  index-DQYFljyK.js  index-Kr5Baac5.js  index-MVphl3VF.css  index-SX5pzCwA.js  index-ZMjmiIqX.js  index-gQeodwby.js  index-k-7NWPmW.js  index-lo8e4nr0.css  index-zVhxllMB.css
backend/: .env  .env.sample  Dockerfile  README.md  app.py  config.py  pyproject.toml  requirements.txt  socket_events.py
backend/app/: config.py  main.py  socket_events.py
backend/app/models/: enums.py  room.py
backend/app/routes/: rooms.py  tags.py
backend/app/schemas/: team.py  team_member_detailed.py  user_preview_profile.py
backend/app/utils/: choose_unsolved_problem.py  get_algoleague_problem_tags.py  get_problem_by_tag.py  get_recent_solver_team.py  get_team_info.py
backend/models/: room.py
backend/routes/: rooms.py  tags.py
backend/utils/: choose_unsolved_problem.py  get_algoleague_problem_tags.py  get_problem_by_tag.py  get_recent_solver_team.py  get_team_info.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/routes/: index.tsx
frontend/src/routes/-components/: slogan.tsx
